# PUnity

./: .gitignore  README.md  pyproject.toml  requirements.txt
profiles/: default.json
scripts/: bootstrap.ps1
src/punity/: __main__.py  app.py  models.py
src/punity/actions/: dispatcher.py
src/punity/capture/: camera.py
src/punity/config/: profile.py
src/punity/control/: fsm.py
src/punity/gestures/: features.py  recognizer.py
src/punity/perception/: hands.py
src/punity/tracking/: filters.py  hand_state.py
src/punity/ui/: overlay.py  punity_gui.py  tron_gui.py
tests/: test_fsm.py  test_recognizer.py
